[gd_scene load_steps=2 format=3 uid="uid://bsf00q17e4aoy"]

[ext_resource type="Script" path="res://Charter/Node Type Menu/Node Property Value/CharterNodePropertyValue.gd" id="1_8ilfw"]

[node name="CharterNodePropertyValue" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
script = ExtResource("1_8ilfw")

[node name="ValueType" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "String"
popup/item_1/text = "Number"
popup/item_1/id = 1
popup/item_2/text = "Boolean"
popup/item_2/id = 2
popup/item_3/text = "Array"
popup/item_3/id = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="StringEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Text"

[node name="NumberEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="BoolEdit" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ArrayEdit" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="NewButton" type="Button" parent="VBoxContainer/ArrayEdit"]
layout_mode = 2
text = "New item"

[connection signal="item_selected" from="ValueType" to="." method="_on_value_type_item_selected"]
